# hac-cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: post-tool-call.sh  post_tool_call.py  pre-tool-call.sh  pre_tool_call.py
.claude/rules/: coding-standards.md  common-prompts.md  hac-api.md  testing-patterns.md  workflows.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  getting-started.md  releasing.md  script-authoring.md  security.md
scripts/: bump_version.py
scripts/_templates/: script.groovy.template
scripts/cache/: clear_all_caches.groovy  clear_region.groovy
scripts/catalog/: get_catalog_versions.groovy  sync_catalog.groovy
scripts/customer/: find_customer.groovy
scripts/orders/: get_order_status.groovy
src/hac_cli/: __init__.py  main.py
src/hac_cli/application/: __init__.py  execute_groovy.py  manage_environments.py
src/hac_cli/cli/: __init__.py  app.py  cmd_env.py  cmd_groovy.py  cmd_scripts.py
src/hac_cli/domain/: __init__.py  exceptions.py  models.py  ports.py
src/hac_cli/infrastructure/: __init__.py  config_store.py  env_secret_store.py  hac_client.py  script_repository.py  secret_store.py
src/hac_cli/tui/: __init__.py  app.py  widgets.py
src/hac_cli/utils/: logging.py  output.py
tests/: conftest.py
tests/integration/: conftest.py  test_hac_smoke.py
tests/unit/: test_cli_scripts.py  test_config_store.py  test_execute_groovy.py  test_hac_client.py  test_script_library.py
