[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hac-cli"
version = "0.1.0"
description = "CLI tool for executing HAC Groovy scripts across SAP Commerce environments"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SAP Commerce Team", email = "dev@example.com" }]
keywords = ["sap", "hybris", "commerce", "hac", "groovy", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]

dependencies = [
    "httpx[http2]>=0.27",
    "typer>=0.12",
    "rich>=13",
    "textual>=0.70",
    "keyring>=25",
    "tomli-w>=1.0",
    "thefuzz>=0.22",
    "python-Levenshtein>=0.25",
    "beautifulsoup4>=4.12",
    "lxml>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "detect-secrets>=1.5",
    "respx>=0.21",
]

[project.scripts]
hac = "hac_cli.main:app"

[project.urls]
Repository = "https://github.com/your-org/hac-cli"
Documentation = "https://github.com/your-org/hac-cli/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/hac_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/", "scripts/", "README.md", "CHANGELOG.md"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["hac_cli"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"
addopts = "-v --cov=src/hac_cli --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: marks tests requiring a live HAC instance (deselect with '-m not integration')",
    "slow: marks tests as slow-running",
]

[tool.coverage.run]
source = ["src/hac_cli"]
omit = [
    "*/tui/*",
    "*/main.py",
    "*/cli/*",             # CLI commands require Typer runner — tested via integration
    "*/application/*",     # Application layer tested via integration tests
    "*/utils/output.py",   # Rich output helper — no logic to unit test
    "*/secret_store.py",   # KeyringSecretStore — unused in main flow, no unit tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
